# Sentix_Aegis

./: .gitignore  AGENTS.md  LICENSE  README.md  campaign_patch.json  pyproject.toml
infra/: __init__.py  app.py  cdk.json
scripts/: battle.py  campaign.py  evolve.py
src/aegis/: __init__.py
src/aegis/common/: config.py  types.py
src/aegis/detection/: pipeline.py
src/aegis/detection/analyzers/: behavioral.py  correlator.py  pattern.py  statistical.py
src/aegis/detection/collectors/: __init__.py  aws.py  azure.py  oracle.py
src/aegis/genome/: codec.py  fitness.py  homeostasis.py  operators.py
src/aegis/immune/: canary.py  classifier.py  verifier.py
src/aegis/metamorphic/: compiler.py  forms.py  transition.py
src/aegis/sandbox/: arena.py  battle_log.py  blue_agent.py  breach_model.py  memory.py  model_adapter.py  red_agent.py
tasks/: lessons.md  todo.md
tests/unit/: test_collectors.py  test_core.py  test_genome.py  test_immune.py
