[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentix-aegis"
version = "0.1.0"
description = "Adaptive Evolving Guard & Immune System — self-evolving multi-cloud security defense"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "JANUS Team"},
]
keywords = ["security", "devsecops", "multi-cloud", "genetic-algorithm", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "structlog>=24.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "boto3>=1.34",
    "asyncpg>=0.29",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
